menambahkan activation code
